force-app/src/objects/Accreditation__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accreditations</relationshipLabel>
        <relationshipName>Accreditations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AccreditationOutcome2__c</fullName>
        <description>Current Accreditation Outcome, this does not include recommendations.</description>
        <formula>BLANKVALUE(Account__r.Aggregate_Result__r.AccreditationOutcome__c, &apos;N/A&apos;)</formula>
        <inlineHelpText>This reflects the school&apos;s most recent accreditation decision.</inlineHelpText>
        <label>OBSOLETE Accreditation Decision</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccreditationOutcome__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <description>Current Accreditation Outcome, this does not include recommendations.</description>
        <inlineHelpText>This reflects the school&apos;s most recent accreditation decision.</inlineHelpText>
        <label>Accreditation Decision</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentAccreditationCycle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Accreditation Cycle</label>
        <referenceTo>AccreditationCycle__c</referenceTo>
        <relationshipLabel>Accreditations</relationshipLabel>
        <relationshipName>Accreditations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CurrentAccreditationTrack__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Current Framework</label>
        <referenceTo>AccreditationTrack__c</referenceTo>
        <relationshipLabel>Accreditations</relationshipLabel>
        <relationshipName>Accreditations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CurrentCycleStageLink__c</fullName>
        <description>Current Cycle Stage name, presented as clickable link</description>
        <formula>IF((ISBLANK(CurrentCycleStage__c) || !ISPICKVAL($User.UserType, &apos;Standard&apos;)), &apos;N/A&apos;, HYPERLINK(
  &quot;/&quot; &amp;  CurrentCycleStage__c, 
   CurrentCycleStage__r.StageName__c,
  &quot;_self&quot;
))</formula>
        <label>Current Cycle Stage Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentCycleStage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Cycle Stage Name</label>
        <referenceTo>AccreditationCycleStage__c</referenceTo>
        <relationshipLabel>Accreditations</relationshipLabel>
        <relationshipName>Accreditations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CurrentIAC__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <description>Current SSA for Accreditation, configured at Accreditation Stage</description>
        <inlineHelpText>This field is showing the current SSA for this accreditation. The SSA varies by accreditation stage and is configured there.</inlineHelpText>
        <label>IAC</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentSSA__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <description>Current SSA for Accreditation, configured at Accreditation Stage</description>
        <inlineHelpText>This field is showing the current SSA for this accreditation. The SSA varies by accreditation stage and is configured there.</inlineHelpText>
        <label>SSA</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentStageDueDate__c</fullName>
        <formula>CurrentCycleStage__r.DueDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Stage Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CurrentStageName__c</fullName>
        <formula>CurrentCycleStage__r.AccreditationStage__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Stage Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentStageStartDate__c</fullName>
        <formula>CurrentCycleStage__r.StartDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Stage Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CurrentStageStatus__c</fullName>
        <formula>TEXT( CurrentCycleStage__r.Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Stage Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engagement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Link to former engagement record, for reference only.</inlineHelpText>
        <label>Engagement</label>
        <referenceTo>Engagement__c</referenceTo>
        <relationshipLabel>Accreditations</relationshipLabel>
        <relationshipName>Accreditations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FirstCycleStartDate__c</fullName>
        <inlineHelpText>When the school initially started engaging with CIS Accreditation in their first cycle.</inlineHelpText>
        <label>Initial Start Date</label>
        <summarizedField>AccreditationCycle__c.StartDate__c</summarizedField>
        <summaryForeignKey>AccreditationCycle__c.Accreditation__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Framework__c</fullName>
        <label>OBSOLETE Framework</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>8th Edition</fullName>
                </value>
                <value>
                    <fullName>CIS International Accreditation 2016</fullName>
                </value>
                <value>
                    <fullName>CIS International Accreditation 2019</fullName>
                </value>
                <value>
                    <fullName>New Framework</fullName>
                    <default>true</default>
                    <label>New Framework</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IAA__c</fullName>
        <formula>Account__r.IAA__r.FirstName + &apos; &apos; +
IF(!ISBLANK(Account__r.IAA__r.MiddleName), Account__r.IAA__r.MiddleName + &apos; &apos;, &apos;&apos;) +
Account__r.IAA__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IAA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsNewAccreditationCycleAllowed__c</fullName>
        <description>Boolean that indicates if creating a new Accreditation Cycle record is allowed. It is used to show or /hide the button &apos;New Accreditation Cycle&apos; on the Accreditation Record page and for validation.</description>
        <formula>(
  nCycles__c = 0 || nPlannedCycles__c = 0
) &amp;&amp;
(
   ISPICKVAL(Status__c, &apos;Registered&apos;) ||
   ISPICKVAL(Status__c, &apos;Accredited&apos;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Accreditation Cycle Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsUserIAA__c</fullName>
        <description>If checked the user is registered as a IAA for the related Account, this field is used as a filter for certain components on Lightning Record pages.</description>
        <formula>IF ( $User.Id =  Account__r.IAA__r.Id, true, false )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User IAA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsUserSSEO__c</fullName>
        <description>If checked the user is registered as a SSEO for the related Account, this field is used as a filter for certain components on Lightning Record pages.</description>
        <formula>IF ( $User.Id =  Account__r.SSEO__r.Id, true, false )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User SSEO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsVRBypassed__c</fullName>
        <formula>BLANKVALUE(ValidationBypassDateTime__c, $System.OriginDateTime) &gt; NOW() - 0.00005787037 /*Five Seconds*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsVRBypassed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OriginalAccreditationDate2__c</fullName>
        <formula>Account__r.Aggregate_Result__r.Original_Accreditation_Date__c</formula>
        <inlineHelpText>When a school first became accredited.</inlineHelpText>
        <label>OBSOLETE Original Accreditation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OriginalAccreditationDate__c</fullName>
        <inlineHelpText>When a school first became accredited.</inlineHelpText>
        <label>Original Accreditation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OriginatingMembership__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Originating Membership</label>
        <referenceTo>Membership__c</referenceTo>
        <relationshipLabel>Accreditations</relationshipLabel>
        <relationshipName>Accreditations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReaccreditationDate2__c</fullName>
        <formula>Account__r.Aggregate_Result__r.Reaccreditation_Date__c</formula>
        <inlineHelpText>When a school last became re-accredited.</inlineHelpText>
        <label>OBSOLETE Re-Accreditation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ReaccreditationDate__c</fullName>
        <inlineHelpText>When a school last became re-accredited.</inlineHelpText>
        <label>Re-Accreditation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RegisteredById__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Registered By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accreditations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RegisteredByName__c</fullName>
        <label>Registered By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegistrationDate__c</fullName>
        <inlineHelpText>When a school registered</inlineHelpText>
        <label>Registration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RegistrationDueDateOverride__c</fullName>
        <description>THIS FIELD IS NOT USED YET
https://dev.azure.com/COIS-ORG/IT%20Service%20Requests/_workitems/edit/131</description>
        <inlineHelpText>The calculated Registration Due Date can be overriden by setting a date in this field.</inlineHelpText>
        <label>Registration Due Date Override</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RegistrationDueDate__c</fullName>
        <formula>BLANKVALUE(RegistrationDueDateOverride__c, ADDMONTHS(OriginatingMembership__r.Status_to_Active__c, 24))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>By when a school is required to register.</inlineHelpText>
        <label>Registration Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ReportManager__c</fullName>
        <formula>Account__r.ReportManager__r.FirstName + &apos; &apos; +
IF(!ISBLANK(Account__r.ReportManager__r.MiddleName), Account__r.ReportManager__r.MiddleName + &apos; &apos;, &apos;&apos;) +
Account__r.ReportManager__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSEO__c</fullName>
        <formula>Account__r.SSEO__r.FirstName + &apos; &apos; +
IF(!ISBLANK(Account__r.SSEO__r.MiddleName), Account__r.SSEO__r.MiddleName + &apos; &apos;, &apos;&apos;) + 
Account__r.SSEO__r.LastName</formula>
        <label>SSEO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Accreditation Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Not Required</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Registered</fullName>
                </value>
                <value>
                    <fullName>Accredited</fullName>
                </value>
                <value>
                    <fullName>Withdrawn by Member</fullName>
                </value>
                <value>
                    <fullName>Withdrawn by CIS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ValidationBypassDateTime__c</fullName>
        <defaultValue>$System.OriginDateTime</defaultValue>
        <description>This field is used in to be able to override validation rules configured on the SObject</description>
        <label>ValidationBypassDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WithdrawalDate__c</fullName>
        <label>Withdrawal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WithdrawalReason__c</fullName>
        <label>Withdrawal Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Breach of membership terms</fullName>
                </value>
                <value>
                    <fullName>Change in Government/Country Policy</fullName>
                </value>
                <value>
                    <fullName>Changing accreditation agencies</fullName>
                </value>
                <value>
                    <fullName>Financial</fullName>
                </value>
                <value>
                    <fullName>Institutional needs changed</fullName>
                </value>
                <value>
                    <fullName>Lack of budget</fullName>
                </value>
                <value>
                    <fullName>Lack of value</fullName>
                </value>
                <value>
                    <fullName>Leadership change in institution</fullName>
                </value>
                <value>
                    <fullName>Merged with another institution</fullName>
                </value>
                <value>
                    <fullName>Non-payment</fullName>
                </value>
                <value>
                    <fullName>Permanently closed</fullName>
                </value>
                <value>
                    <fullName>Standards not met</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nClosedCycles__c</fullName>
        <description>Total number of closed Accreditation Cycles for this Accreditation.</description>
        <inlineHelpText>Total number of closed Accreditation Cycles for this Accreditation.</inlineHelpText>
        <label># Closed Cycles</label>
        <summaryFilterItems>
            <field>AccreditationCycle__c.IsClosed__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>AccreditationCycle__c.Accreditation__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>nCompletedCycles__c</fullName>
        <description>Total number of completed Accreditation Cycles for this Accreditation.</description>
        <inlineHelpText>Total number of completed Accreditation Cycles for this Accreditation.</inlineHelpText>
        <label># Completed Cycles</label>
        <summaryFilterItems>
            <field>AccreditationCycle__c.Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>AccreditationCycle__c.Accreditation__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>nCurrentCycle__c</fullName>
        <description>The current Accreditation Cycle that is &apos;In Progress&apos; or &apos;Completed&apos;.</description>
        <inlineHelpText>The current Accreditation Cycle that is &apos;In Progress&apos; or &apos;Completed&apos;.</inlineHelpText>
        <label># Current Cycle</label>
        <summaryFilterItems>
            <field>AccreditationCycle__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Planned</value>
        </summaryFilterItems>
        <summaryForeignKey>AccreditationCycle__c.Accreditation__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>nCycles__c</fullName>
        <description>Total number of Accreditation Cycles for this Accreditation.</description>
        <inlineHelpText>Total number of Accreditation Cycles for this Accreditation.</inlineHelpText>
        <label># Cycles</label>
        <summaryForeignKey>AccreditationCycle__c.Accreditation__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>nPlannedCycles__c</fullName>
        <label># Planned Cycles</label>
        <summaryFilterItems>
            <field>AccreditationCycle__c.Status__c</field>
            <operation>equals</operation>
            <value>Planned</value>
        </summaryFilterItems>
        <summaryForeignKey>AccreditationCycle__c.Accreditation__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Accreditation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>FirstCycleStartDate__c</columns>
        <columns>CurrentAccreditationCycle__c</columns>
        <columns>CurrentCycleStageLink__c</columns>
        <columns>IAA__c</columns>
        <columns>CurrentIAC__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>External</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Accreditation__c.External</value>
        </filters>
        <label>External Accreditation Agency</label>
    </listViews>
    <listViews>
        <fullName>Internal</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>FirstCycleStartDate__c</columns>
        <columns>CurrentAccreditationCycle__c</columns>
        <columns>CurrentCycleStageLink__c</columns>
        <columns>IAA__c</columns>
        <columns>CurrentIAC__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Accreditation__c.Internal</value>
        </filters>
        <label>CIS</label>
    </listViews>
    <listViews>
        <fullName>My_Accreditations</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Accreditations</label>
        <sharedTo>
            <group>All_Community_Members</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Prospects</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>RegistrationDueDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Prospect</value>
        </filters>
        <label>Prospects</label>
    </listViews>
    <nameField>
        <label>Accreditation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Accreditations</pluralLabel>
    <recordTypes>
        <fullName>External</fullName>
        <active>true</active>
        <description>Create an accreditation record for a school not required to undergo CIS Accreditation.</description>
        <label>External</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internal</fullName>
        <active>true</active>
        <description>Create an accreditation record for a school required to undergo CIS Accreditation.</description>
        <label>Internal</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Prevent_Override_Registration_Due_Date</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(RegistrationDueDateOverride__c) &amp;&amp;
!ISNULL(RegistrationDueDateOverride__c) &amp;&amp;
!$Permission.Override_Registration_Due_Date</errorConditionFormula>
        <errorMessage>You are not allowed to override the Registration Due Date...</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Revert_Status_Prospect</fullName>
        <active>true</active>
        <errorConditionFormula>ISNEW() &amp;&amp;
ISCHANGED(Status__c) &amp;&amp;
ISPICKVAL(Status__c, &apos;Prospect&apos;) &amp;&amp;
!$Permission.Revert_Accreditation_Status</errorConditionFormula>
        <errorDisplayField>Account__c</errorDisplayField>
        <errorMessage>You cannot revert the status to &apos;Prospect&apos;...</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Update_Account</fullName>
        <active>true</active>
        <errorConditionFormula>!ISNEW() &amp;&amp;
ISCHANGED(Account__c)</errorConditionFormula>
        <errorMessage>You are not allowed to update the Account...</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Update_Accreditation_Name</fullName>
        <active>true</active>
        <errorConditionFormula>!ISNEW() &amp;&amp;
ISCHANGED(Name) &amp;&amp;
!IsVRBypassed__c</errorConditionFormula>
        <errorMessage>You are not allowed to update the Accreditation name...</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Update_Status</fullName>
        <active>true</active>
        <description>Custom permission &apos;Update Accreditation Status&apos; or &apos;Update Accreditation Status To Closed&apos; must be assigned (for closing an Accreditation record).</description>
        <errorConditionFormula>!ISNEW() &amp;&amp;
ISCHANGED(Status__c) &amp;&amp;
!$Permission.Update_Accreditation_Status &amp;&amp;
!IsVRBypassed__c &amp;&amp;
(ISPICKVAL(Status__c, &apos;Closed&apos;) &amp;&amp; !$Permission.Update_Accreditation_Status_To_Closed)</errorConditionFormula>
        <errorMessage>You are not allowed to update the Accreditation status...</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Update_Status_From_Closed</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( Status__c ) &amp;&amp;
ISPICKVAL( PRIORVALUE( Status__c ), &apos;Closed&apos; )</errorConditionFormula>
        <errorMessage>You cannot update the Accreditation status once it is closed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Update_Status_To_Withdrawn</fullName>
        <active>true</active>
        <errorConditionFormula>!ISNEW() &amp;&amp;
ISCHANGED(Status__c) &amp;&amp;
(ISPICKVAL(Status__c, &apos;Withdrawn by CIS&apos;) || ISPICKVAL(Status__c, &apos;Withdrawn by Member&apos;)) &amp;&amp;
!$Permission.Update_Accreditation_Status_To_Withdrawn</errorConditionFormula>
        <errorMessage>You are not allowed to update the Accreditation status to withdrawn...</errorMessage>
    </validationRules>
</CustomObject>